--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>One Direction</h1>  
-
+<ul>
+    <li>Quem somos?</li>
+    
+</ul>
+<h1>Somos uma boyband pop formada na cidade de Londres, Reino Unido, em 2010. O quinteto foi formado após seus membros participarem do reality show musical The X Factor como competidores solo, até que, durante o programa, a cantora Nicole Scherzinger e Simon Cowell os uniram para concorrer como um grupo. A banda acabou em terceiro lugar do programa, atrás apenas de Rebecca Ferguson e Matt Cardle, respectivamente.</h1>
+    
 </body>
 </html>
 
