--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
 </head>
 <header>
     <body>
+        <ul>    
         <h1>One Direction</h1>  
-    <ul>
         <li>Quem somos?</li>
         
-    </ul>
-   
-        
-    </body>
+    </ul> 
 </header>
 <h1>Somos uma boyband pop formada na cidade de Londres, Reino Unido, em 2010. O quinteto foi formado após seus membros participarem do reality show musical The X Factor como competidores solo, até que, durante o programa, a cantora Nicole Scherzinger e Simon Cowell os uniram para concorrer como um grupo. A banda acabou em terceiro lugar do programa, atrás apenas de Rebecca Ferguson e Matt Cardle, respectivamente.</h1>
-</html>
-
 <section> one Direction
     <h2>Integrantes</h2>
-    <p></p>
-<p></p>
+    <img src="harry.webp" alt="harry styles" >
+    <img src="louis.jpg" alt="louis tomlinsom">
+    <img src="niall.webp" alt="niall horan">
+    <img src="liam.jpg" alt="liam payne">
+    <img src="zayn.jpg" alt="zayn malik">
 </section>
-</body>
+
+<body>
+</html>
+
+
+
